--- a/bitcoin/Cargo.toml
+++ b/bitcoin/Cargo.toml
@@ -13,12 +13,8 @@ edition = "2018"
 exclude = ["tests", "contrib"]
 
 [features]
-default = [ "std", "secp-recovery" ]
-rand-std = ["secp256k1/rand-std"]
-rand = ["secp256k1/rand"]
-serde = ["actual-serde", "bitcoin_hashes/serde", "secp256k1/serde"]
-secp-lowmemory = ["secp256k1/lowmemory"]
-secp-recovery = ["secp256k1/recovery"]
+default = [ "std"]
+serde = ["actual-serde", "bitcoin_hashes/serde"]
 bitcoinconsensus-std = ["bitcoinconsensus/std", "std"]
 
 # At least one of std, no-std must be enabled.
@@ -26,8 +22,8 @@ bitcoinconsensus-std = ["bitcoinconsensus/std", "std"]
 # The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
 # Instead no-std enables additional features required for this crate to be usable without std.
 # As a result, both can be enabled without conflict.
-std = ["secp256k1/std", "bitcoin_hashes/std", "bech32/std", "bitcoin-internals/std"]
-no-std = ["core2", "bitcoin_hashes/alloc", "bitcoin_hashes/core2", "secp256k1/alloc"]
+std = ["bitcoin_hashes/std", "bech32/std", "bitcoin-internals/std"]
+no-std = ["core2", "bitcoin_hashes/alloc", "bitcoin_hashes/core2"]
 
 [package.metadata.docs.rs]
 all-features = true
@@ -37,7 +33,6 @@ rustdoc-args = ["--cfg", "docsrs"]
 bitcoin-internals = { path = "../internals", package = "bitcoin-private", version = "0.1.0" }
 bech32 = { version = "0.9.0", default-features = false }
 bitcoin_hashes = { version = "0.12.0", default-features = false }
-secp256k1 = { version = "0.27.0", default-features = false, features = ["bitcoin_hashes"] }
 hex_lit = "0.1.1"
 
 base64 = { version = "0.13.0", optional = true }
@@ -54,18 +49,3 @@ bincode = "1.3.1"
 
 [target.'cfg(mutate)'.dev-dependencies]
 mutagen = { git = "https://github.com/llogiq/mutagen" }
-
-[[example]]
-name = "bip32"
-
-[[example]]
-name = "handshake"
-required-features = ["std", "rand-std"]
-
-[[example]]
-name = "ecdsa-psbt"
-required-features = ["std", "bitcoinconsensus"]
-
-[[example]]
-name = "taproot-psbt"
-required-features = ["std", "rand-std", "bitcoinconsensus"]
